5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4003/executions/1791_1619.log
== TEST (2019-05-29 14:11:23) 
-- CODE:
from numpy import*

t/m = 0.005 

m = float(eval(input("minutos: ")))
w = float(eval(input("modo: ")))
-- ERROR:
File "XXXX", line 3
    t/m = 0.005 
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:11:29) 
-- CODE:
from numpy import*

t = 0.005 

m = float(eval(input("minutos: ")))
w = float(eval(input("modo: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:17:14) 
-- CODE:
from numpy import*

t = 0.005 

m = float(eval(input("minutos: ")))
w = float(eval(input("modo: ")))

a = 90 #quente
b = 45 #morno
c = 0 #frio
v1[] # tempos dos banhos
v2[] #modos dos banhos

while v[a] > 0:
	a = a + 1
	

print(w, 2)


-- ERROR:
File "XXXX", line 11
    v1[] # tempos dos banhos
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:17:44) 
-- CODE:
from numpy import*

t = 0.005 

m = float(eval(input("minutos: ")))
w = float(eval(input("modo: ")))

a = 90 #quente
b = 45 #morno
c = 0 #frio
v1[] # tempo dos banhos
v2[] #modos dos banhos

while v[a] > 0:
	a = a + 1
	

print(w, 2)


-- ERROR:
File "XXXX", line 11
    v1[] # tempo dos banhos
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:17:53) 
-- CODE:
from numpy import*

t = 0.005 

m = float(eval(input("minutos: ")))
w = float(eval(input("modo: ")))

a = 90 #quente
b = 45 #morno
c = 0 #frio
v1[0] # tempo dos banhos
v2[0] #modos dos banhos

while v[a] > 0:
	a = a + 1
	

print(w, 2)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:18:31) 
-- CODE:
from numpy import*

t = 0.005 

m = int(eval(input("minutos: ")))
w = int(eval(input("modo: ")))

a = 90 #quente
b = 45 #morno
c = 0 #frio
v1[0] # tempo dos banhos
v2[0] #modos dos banhos

while v[a] > 0:
	a = a + 1
	

print(w, 2)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:38:44) 
-- CODE:
from numpy import*

t = 0.005 

m = int(eval(input("minutos: ")))
w = int(eval(input("modo: ")))

a = 90 #quente
b = 45 #morno
c = 0 #frio
v1[0] # tempo dos banhos
v2[0] #modos dos banhos

while v[a] > 0:
	a = a + 1
	

print(w, 2)


-- EXECUTION TIME:
0.462383
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1619/main.py", line 5, in <module>
    m = int(eval(input()))
TypeError: int() argument must be a string or a number, not 'list'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
